Update loader/src/main/java/net/neoforged/fml/loading/FMLServiceProvider.java
Co-authored-by: Matyrobbrt <65940752+Matyrobbrt@users.noreply.github.com>